--- a/exe_07_gokuchat/styles.css
+++ b/exe_07_gokuchat/styles.css
@@ -47,6 +47,41 @@ table {
     border-spacing: 0;
 }
 
+.gokuapp {
+    width: 100%;
+    overflow: hidden;
+}
+
 .gokutable {
-    width: 300px;
+    width: 30%;
+    float: left;
+    height: 100%;
+    overflow: scroll;
+}
+
+.gokurow {
+    background-color: lightblue;
+    border:1px solid black;
+    width: 100%;
+    height: 80px;
+    line-height: 80px;
+}
+
+.avatar-container {
+    width: 120px;
+    display: inline-block;
+    text-align: center;
+}
+
+.avatar {
+    vertical-align: middle;
+    max-height: 75px;
+    max-width: 100px;
+}
+
+.gokuchat {
+    width: 70%;
+    float: right;
+    height: 100%;
+    overflow: scroll;
 }
