ADD: animations css react

--- a/exe_07_gokuchat/public/app.css
+++ b/exe_07_gokuchat/public/app.css
@@ -85,3 +85,13 @@ table {
     height: 100%;
     overflow: scroll;
 }
+
+.message-animation-enter {
+    opacity: 0;
+    transition: opacity .5s ease-in;
+}
+
+.message-animation-enter.message-animation-enter-active {
+    opacity: 1;
+}
+
